--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Blank Template (TypeScript)",
+    "name": "Weather App",
     "slug": "weather-app-rn",
     "privacy": "public",
     "sdkVersion": "36.0.0",
