--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@react-native-community/masked-view": "0.1.5",
     "axios": "^0.19.2",
     "expo": "~36.0.0",
+    "expo-location": "~8.0.0",
+    "expo-permissions": "~8.0.0",
     "moment": "^2.24.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
