--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo": "~36.0.0",
     "expo-location": "~8.0.0",
     "expo-permissions": "~8.0.0",
+    "expo-sqlite": "~8.0.0",
     "moment": "^2.24.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
