--- a/app.json
+++ b/app.json
@@ -1,13 +1,12 @@
 {
   "expo": {
     "name": "Weather App",
-    "slug": "weather-app-rn",
+    "slug": "weather-app",
     "privacy": "public",
     "sdkVersion": "36.0.0",
     "platforms": [
       "ios",
-      "android",
-      "web"
+      "android"
     ],
     "version": "1.0.0",
     "orientation": "portrait",
